# samp-plugin-totp

./: .gitignore  CMakeLists.txt  DEPS  LICENSE  readme.md
include/: a_totp.inc
src/: CMakeLists.txt  Config.hpp  Logprintf.cpp  Logprintf.hpp  Natives.cpp  Natives.hpp  Plugin.cpp
test/: test_gamemode.pwn
